--- a/src/copy_scripts.vcxproj
+++ b/src/copy_scripts.vcxproj
@@ -222,11 +222,11 @@
     <None Include="angle.gyp"/>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="commit_id.py">
+    <CustomBuild Include="commit_id.bat">
       <FileType>Document</FileType>
-      <Command>call mkdir &quot;$(OutDir)obj\global_intermediate\angle&quot; 2&gt;nul &amp; set ERRORLEVEL=0 &amp; copy /Y &quot;commit_id.py&quot; &quot;$(OutDir)obj\global_intermediate\angle\commit_id.py&quot;&#xD;&#xA;if %errorlevel% neq 0 exit /b %errorlevel%</Command>
-      <Message>Copying commit_id.py to $(OutDir)obj/global_intermediate/angle\commit_id.py</Message>
-      <Outputs>$(OutDir)obj\global_intermediate\angle\commit_id.py</Outputs>
+      <Command>call mkdir &quot;$(OutDir)obj\global_intermediate\angle&quot; 2&gt;nul &amp; set ERRORLEVEL=0 &amp; copy /Y &quot;commit_id.bat&quot; &quot;$(OutDir)obj\global_intermediate\angle\commit_id.bat&quot;&#xD;&#xA;if %errorlevel% neq 0 exit /b %errorlevel%</Command>
+      <Message>Copying commit_id.bat to $(OutDir)obj/global_intermediate/angle\commit_id.bat</Message>
+      <Outputs>$(OutDir)obj\global_intermediate\angle\commit_id.bat</Outputs>
     </CustomBuild>
     <CustomBuild Include="copy_compiler_dll.bat">
       <FileType>Document</FileType>
